重构整个自动操作的启动链
重构校验逻辑